--- a/index.html
+++ b/index.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <title>Cartoon Movie World</title>
 </head>
+
 <body>
-    <p>hallo</p>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="img/MIC.png" alt="Cartoon Movie World Logo">
+            </div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#movies">Movies</a></li>
+                <li><a href="#about-us">Tentangkami</a></li>
+                <li><a href="login.html"><i class="fas fa-user"></i></a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="home-intro" id="home">
+        <div class="intro-text">
+            <h1>Explore the World of Web Movies</h1>
+            <p>Selamat datang World of Web Movies, pintu gerbang Anda menuju dunia ajaib cerita animasi. Meresapi diri Anda dalam koleksi film web yang memukau, menghidupkan karakter, membangkitkan emosi, dan membawa Anda dalam petualangan luar biasa.</p>
+            <p>Temukan seni bercerita melalui animasi, di mana setiap bingkai adalah sapuan kuas yang melukis narasi yang berwarna-warni. Dari klasik abadi hingga rilis terbaru, seleksi terkurasi kami dapat dinikmati dan memikat penonton dari berbagai usia.</p>
+            <a href="#movies" class="cta-button">Temukan Film</a>
+        </div>
+        <div class="intro-image">
+            <video autoplay muted loop playsinline>
+                <source src="img/home.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </section>
+
+    <section class="cartoon-movies">
+        <h2>Cartoon Movies</h2>
+    </section>
+
+    <section class="movie-list" id="movies">
+        <article class="movie-card">
+            <img src="https://img.youtube.com/vi/gEbbHlMXE9Y/0.jpg" alt="Marsha and the Bear">
+            <h2><a href="https://youtu.be/gEbbHlMXE9Y?si=mr6YubzAl1dvmwmd" target="_blank">Marsha and the Bear</a></h2>
+            <p>Bergabunglah dengan Marsha dan beruangnya dalam kisah persahabatan dan petualangan yang penuh kasih.</p>
+        </article>
+
+        <article class="movie-card">
+            <a href="https://youtu.be/iYjmfSVnkFw?si=Ch26IAOyTOemzZZn" target="_blank">
+                <img src="https://img.youtube.com/vi/iYjmfSVnkFw/0.jpg" alt="Baby Bus">
+            </a>
+            <h2><a href="https://youtu.be/iYjmfSVnkFw?si=Ch26IAOyTOemzZZn" target="_blank">Baby Bus</a></h2>
+            <p>Temui berbagai macam karakter menarik dalam kisah klasik mainan yang hidup.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://img.youtube.com/vi/RnC0ziJnXtc/0.jpg" alt="Little Angel">
+            <h2><a href="https://youtu.be/RnC0ziJnXtc?si=ItVkZ9SVEmx3mWxp" target="_blank">Little Angel</a></h2>
+            <p>Saksikan kisah klasik mainan yang menjadi hidup dalam petualangan yang menghibur.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://img.youtube.com/vi/FTUs-2LYMC8/0.jpg" alt="BreadBarbershop">
+            <h2><a href="https://youtu.be/FTUs-2LYMC8?si=9O89ESP0qYCWHSUs" target="_blank">BreadBarbershop</a></h2>
+            <p>Nikmati cerita tentang mainan yang cobalah untuk hidup dalam sebuah toko roti yang unik.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://img.youtube.com/vi/D_MU82kicJA/0.jpg" alt="Doraemon">
+            <h2><a href="https://youtu.be/D_MU82kicJA?si=BWpAhSLR8vPjQr6S" target="_blank">Doraemon</a></h2>
+            <p>Bergabunglah dengan petualangan Doraemon dan Nobita dalam dunia yang penuh keajaiban dan persahabatan.</p>
+        </article>
+
+        <article class="movie-card">
+            <a href="https://youtu.be/iYjmfSVnkFw?si=Ch26IAOyTOemzZZn" target="_blank">
+                <img src="https://img.youtube.com/vi/lexTNfvBcEE/0.jpg" alt="Little Pony">
+            </a>
+            <h2><a href="https://youtu.be/lexTNfvBcEE?si=lHF0OaQXfsUf9nPz" target="_blank">Little Pony</a></h2>
+            <p>Rasakan keajaiban dunia Little Pony dalam kisah yang penuh pesan positif dan persahabatan.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://img.youtube.com/vi/5aDk60VjgJQ/0.jpg" alt="Rainbow Ruby">
+            <h2><a href="https://youtu.be/5aDk60VjgJQ?si=L7VlaEHP8uLcmK2l" target="_blank">Rainbow Ruby</a></h2>
+            <p>Jelajahi dunia warna-warni bersama Ruby dalam petualangan ajaib yang penuh keceriaan.</p>
+        </article>
+
+        <article class="movie-card">
+            <img src="https://img.youtube.com/vi/yXlGqPOPRG0/0.jpg" alt="Strawberry Shortcake">
+            <h2><a href="https://youtu.be/yXlGqPOPRG0?si=2wZdSyc6NGTrjID7" target="_blank">Strawberry Shortcake</a></h2>
+            <p>Ikuti kisah manis Strawberry Shortcake dan teman-temannya dalam petualangan yang penuh dengan buah-buahan.</p>
+        </article>
+    </section>
+
+    <section class="next-button">
+        <a href="login.html" class="cta-button">Next Movie</a>
+    </section>
+
+    <section class="about" id="about-us">
+        <h2>Tentang Kami</h2>
+        <p>Cartoon Movie World adalah tujuan utama Anda untuk film animasi. Kami bersemangat membawa kebahagiaan dan hiburan kepada penonton dari segala usia melalui dunia ajaib animasi. Koleksi kami yang dirangkai dengan cermat mencakup klasik abadi dan rilis terbaru, menjanjikan pengalaman yang menyenangkan untuk setiap penonton.</p>
+        <p>Di Cartoon Movie World, kami percaya pada kekuatan bercerita melalui animasi. Setiap bingkai adalah kanvas, dan setiap karakter adalah karya seni. Bergabunglah dengan kami dalam perjalanan mempesona ini di mana imajinasi tidak mengenal batas.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Cartoon Movie World. All rights reserved.</p>
+        <div class="social-icons">
+            <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
+
 </html>
